substrate/primitives/api/test/tests/ui/declaring_old_block.stderr
error: `Block: BlockT` generic parameter will be added automatically by the `decl_runtime_apis!` macro! If you try to use a different trait than the substrate `Block` trait, please rename it locally.
  --> tests/ui/declaring_old_block.rs:19:23
   |
19 |     pub trait Api<Block: BlockT> {
   |                          ^^^^^^

error: `Block: BlockT` generic parameter will be added automatically by the `decl_runtime_apis!` macro!
  --> tests/ui/declaring_old_block.rs:19:16
   |
19 |     pub trait Api<Block: BlockT> {
   |                   ^^^^^
